# wavecar_rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
examples/: wav2chg.rs
src/: bench.rs  binary_io.rs  constants.rs  error.rs  fft.rs  lib.rs  utils.rs  wavecar.rs  wavefunction.rs
tests/: cleanup.sh  tests.rs
tests/h2o_gam_5_2/: OUTCAR  POSCAR  WAVECAR  h2o_gam_5_2.rs
tests/h2o_gam_5_4/: OUTCAR  WAVECAR  h2o_gam_5_4.rs
tests/nio_soc/: OUTCAR  nio_soc.rs
tests/nio_std/: OUTCAR  WAVECAR  nio_std.rs
