[package]
name = "wavecar_rs"
version = "0.1.0"
authors = ["Ionizing <PeterSmith_9@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
ndarray = {version = "0.13.1", features = ["rayon", "approx"]}
ndarray-linalg = {version = "0.12.1", features = ["openblas"]}
fftw = "0.6.2"
vasp-poscar = "0.3.2"
num = "0.2.0"
rayon = "1.3.1"