[package]
name = "wavecar_rs"
version = "0.1.0"
authors = ["Ionizing <PeterSmith_9@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A lib to manipulate VASP's WAVECAR"
homepage = "https://github.com/Ionizing/wavecar_rs"
repository = "https://github.com/Ionizing/Wavecar_rs"
readme = "README.md"
exclude = ["tests/*"]

[package.metadata.docs.rs]
targets = []

[lib]
name = "wavecar_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
ndarray = {version = "0.13.1", features = ["rayon", "approx"]}
ndarray-linalg = {version = "0.12.1", features = []}
fftw = {version = "0.6.2", default-features=false, features = ["system"]}
vasp-poscar = "0.3.2"
num = "0.2.0"
rayon = "1.3.1"
vaspchg_rs = "0.1.1"

blas-src = {version = "0.2.1", default-features = false, features = ["openblas"]}
openblas-src = {version = "0.6.0", default-features = false, features = ["cblas", "system"]}

[dev-dependencies]
log = "0.4.11"
clap = "3.0.0-beta.1"
colored = "2.0.0"


[[example]]
name = "wav2chg"
